# gitsl

./: .gitignore  LICENSE  README.md  cmd_add.py  cmd_blame.py  cmd_branch.py  cmd_checkout.py  cmd_clean.py  cmd_clone.py  cmd_commit.py  cmd_config.py  cmd_diff.py  cmd_grep.py  cmd_init.py  cmd_log.py  cmd_mv.py  cmd_restore.py  cmd_rev_parse.py  cmd_rm.py  cmd_show.py  cmd_stash.py  cmd_status.py  cmd_switch.py  common.py  gitsl.py  pyproject.toml  pytest.ini  test  test.cmd
.github/workflows/: ci.yml  release.yml
.planning/: INTEGRATION.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
tests/: __init__.py  conftest.py  test_add.py  test_add_flags.py  test_blame.py  test_blame_flags.py  test_branch.py  test_branch_flags.py  test_checkout.py  test_checkout_flags.py  test_clean.py  test_clean_flags.py  test_clone.py  test_clone_flags.py  test_cmd_add.py  test_cmd_commit.py  test_cmd_diff.py  test_cmd_init.py  test_cmd_log.py  test_cmd_rev_parse.py  test_commit.py  test_commit_flags.py  test_config.py  test_config_flags.py  test_diff.py  test_diff_flags.py  test_edge_cases.py  test_error_conditions.py  test_execution.py  test_grep.py  test_grep_flags.py  test_harness.py  test_init.py  test_log.py  test_mv.py  test_mv_flags.py  test_restore.py  test_restore_flags.py  test_rev_parse.py  test_rm.py  (+11 more)
(+167 files in other folders)
