[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsl"
description = "Git to Sapling CLI shim"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gitsl contributors"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dynamic = ["version"]

[project.scripts]
gitsl = "gitsl:main"

[project.urls]
Homepage = "https://github.com/owner/gitsl"
Repository = "https://github.com/owner/gitsl"
Issues = "https://github.com/owner/gitsl/issues"

[tool.setuptools]
py-modules = [
    "gitsl",
    "common",
    "cmd_add",
    "cmd_commit",
    "cmd_diff",
    "cmd_init",
    "cmd_log",
    "cmd_rev_parse",
    "cmd_status",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"
